# FoodBot

./: .env.defaults  .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run  setup-dev
.github/: CODEOWNERS
.github/workflows/: auto-merge.yml  auto-pr.yml  ci.yml  deploy.yml  update-pr-branches.yml
deploy/: deploy-foodbot.sh  foodbot.service
docs/: command-architecture.md
scripts/: check  check_type_style.py  extract_telegram_bot_username.py  setup  setup-dev  uv
src/office_food_bot/: __init__.py  app.py  balance_models.py  config.py  (+16 more)
tests/: conftest.py  test_active_user_resolver.py  test_balance_service.py  test_boolean_input.py  test_business_calendar_service.py  test_coffee_repository.py  test_coffee_service.py  test_command_access_service.py  test_command_architecture.py  test_command_framework.py  test_command_parsing.py  test_commands.py  test_config.py  test_extract_telegram_bot_username.py  test_flow_runner.py  test_help_renderer.py  test_invitation_preference_repository.py  test_job_scheduler.py  test_lunch_pin_service.py  test_lunch_poll_definitions.py  test_lunch_presenter.py  test_lunch_rendering.py  test_lunch_service.py  test_message_previews.py  test_messaging.py  test_poll_options.py  test_poll_repository.py  test_poll_tracking_service.py  test_presence_service.py  test_preview.py  test_preview_catalog.py  test_registration_service.py  test_result.py  test_runtime_guard.py  test_setup_dev.py  test_splitwise_service.py  test_type_style_checker.py  test_user_error_renderer.py  test_user_repository.py  test_vacation_service.py
(+251 files in other folders)
