[project]
name = "office-food-bot"
version = "0.1.0"
description = "Pre-alpha Telegram bot for office food coordination."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram>=3.0,<4.0",
    "apscheduler>=3.11,<4.0",
    "holidays>=0.70,<1.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<3.0",
    "pytest>=8.2,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-regressions>=2.11,<3.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
office-food-bot = "office_food_bot.main:run"
preview = "office_food_bot.preview:run"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
packages = ["office_food_bot"]
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
